# zk-research-implementations

./: Cargo.toml  README.md
benches/: multilinear_poly_benchmark.rs
fft/: Cargo.toml
fft/src/: fft.rs
fiat_shamir/: Cargo.toml
fiat_shamir/src/: fiat_shamir_transcript.rs  lib.rs
gkr/: Cargo.toml
gkr/src/: gkr_circuit.rs  gkr_protocol.rs  lib.rs  main.rs
merkle_tree/: Cargo.toml
merkle_tree/src/: merkle_tree.rs
multilinear_polynomial/: Cargo.toml
multilinear_polynomial/benches/: multilinear_poly_benchmark.rs
multilinear_polynomial/src/: composed_polynomial.rs  lib.rs  multilinear_poly_product.rs  multilinear_polynomial_evaluation.rs
pcs/: Cargo.toml
pcs/src/: lib.rs
pcs/src/kzg_pcs/: kzg.rs
sample_tests/: Cargo.toml
sample_tests/src/: fibonacci_evaluation.rs  lib.rs  main.rs
shamir_secret_sharing/: Cargo.toml
shamir_secret_sharing/src/: shamir_secret_sharing.rs
src/: main.rs  polynomial.rs
src/extras/: multilinear_polynomial_sparse.rs
src/implementations/: fiat_shamir.rs  mod.rs  multilinear_polynomial.rs  polynomial.rs  shamir_scret_sharing.rs  sum_check.rs
sum_check/: Cargo.toml
sum_check/benches/: sum_check_benchmark.rs
sum_check/src/: lib.rs  sum_check_protocol.rs
univariate_polynomial/: Cargo.toml
univariate_polynomial/benches/: univariate_poly_benchmark.rs
univariate_polynomial/src/: lib.rs  univariate_polynomial_dense.rs
