[package]
name = "gkr"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-bls12-381 = "0.5.0"
ark-bn254 = "0.5.0"
ark-ec = "0.5.0"
ark-ff = "0.5.0"
ark-std = "0.5.0"
multilinear_polynomial ={ path = "../multilinear_polynomial"}
fiat_shamir={path = "../fiat_shamir"}
sum_check ={path = "../sum_check"}
univariate_polynomial = {path = "../univariate_polynomial"}
kzg_pcs = {path = "../pcs"}

[dev-dependencies]
field-tracker = { git = "https://github.com/sublinearlabs/field-tracker", branch = "main" }
