[package]
name = "sum_check"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-bn254 = "0.5.0"
ark-ff = "0.5.0"
criterion = "0.5.1"
fiat_shamir ={ path = "../fiat_shamir"}
multilinear_polynomial ={ path = "../multilinear_polynomial"}
univariate_polynomial = {path = "../univariate_polynomial"}

[dev-dependencies]
field-tracker = { git = "https://github.com/sublinearlabs/field-tracker", branch = "main" }

[[bench]]
name = "sum_check_benchmark"
harness = false
